--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,16 +8,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".WelcomeActivity">
+        <activity android:name=".controllers.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RegistrationActivity" />
-        <activity android:name=".LoginAcitivity" />
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".controllers.RegistrationActivity" />
+        <activity android:name=".controllers.LoginActivity" />
+        <activity android:name=".controllers.MainActivity"/>
     </application>
 
 </manifest>
