--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Feb 18 16:08:14 EST 2017
-sdk.dir=/Users/whe1996/Library/Android/sdk
+#Mon Feb 20 21:11:22 EST 2017
+sdk.dir=C\:\\Users\\Brian Cai\\AppData\\Local\\Android\\Sdk
