--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:design:25.1.1'
     testCompile 'junit:junit:4.12'
+    compile 'com.google.firebase:firebase-core:10.2.0'
+    compile 'com.google.firebase:firebase-database:10.2.0'
+    compile 'com.google.firebase:firebase-auth:10.2.0'
 }
+apply plugin: 'com.google.gms.google-services'
