--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Feb 20 23:07:17 EST 2017
-sdk.dir=/Users/whe1996/Library/Android/sdk
+#Wed Feb 22 17:27:33 EST 2017
+sdk.dir=C\:\\Users\\Brian Cai\\AppData\\Local\\Android\\Sdk
