--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,26 +2,42 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="tech.milind.cleanwatercrowdsourcing">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+
         <activity android:name=".controllers.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-
             </intent-filter>
         </activity>
         <activity android:name=".controllers.RegistrationActivity" />
         <activity android:name=".controllers.LoginActivity" />
-        <activity android:name=".controllers.MainActivity"/>
-        <activity android:name=".controllers.ViewProfileActivity"/>
-        <activity android:name=".controllers.EditProfileActivity"/>
-
+        <activity android:name=".controllers.MainActivity" />
+        <activity android:name=".controllers.ViewProfileActivity" />
+        <activity android:name=".controllers.EditProfileActivity" />
+        <activity android:name=".controllers.SubmitSourceReportActivity"
+            android:label="@string/SubmitWaterReport">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="tech.milind.cleanwatercrowdsourcing.controllers.MainActivity"/>
+        </activity>
     </application>
 
 </manifest>
