--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="tech.milind.cleanwatercrowdsourcing">
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -11,7 +11,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -19,8 +18,8 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-
-        <activity android:name=".controllers.WelcomeActivity"
+        <activity
+            android:name=".controllers.WelcomeActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,23 +27,30 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".controllers.RegistrationActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".controllers.LoginActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".controllers.MainActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".controllers.ViewProfileActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".controllers.EditProfileActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".controllers.SubmitSourceReportActivity"
+        <activity
+            android:name=".controllers.RegistrationActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".controllers.LoginActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".controllers.MainActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".controllers.ViewProfileActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".controllers.EditProfileActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".controllers.SubmitSourceReportActivity"
             android:label="@string/SubmitWaterReport"
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="tech.milind.cleanwatercrowdsourcing.controllers.MainActivity"/>
+                android:value="tech.milind.cleanwatercrowdsourcing.controllers.MainActivity" />
         </activity>
+        <activity android:name=".controllers.EditSourceReportActivity"></activity>
     </application>
 
 </manifest>
