--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Feb 23 22:48:38 EST 2017
-sdk.dir=C\:\\Users\\SuperLinguini\\AppData\\Local\\Android\\Sdk
+#Sun Mar 12 14:57:46 EDT 2017
+sdk.dir=/Users/whe1996/Library/Android/sdk
