--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Mar 20 17:52:41 EDT 2017
-sdk.dir=/Users/whe1996/Library/Android/sdk
+#Mon Apr 10 19:42:52 EDT 2017
+sdk.dir=C\:\\Android\\sdk
