Fixing project warnings.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,8 +57,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="tech.milind.cleanwatercrowdsourcing.controllers.MainActivity" />
         </activity>
-        <activity android:name=".controllers.EditSourceReportActivity"></activity>
-        <activity android:name=".controllers.EditQualityReportActivity"></activity>
+        <activity android:name=".controllers.EditSourceReportActivity"/>
+        <activity android:name=".controllers.EditQualityReportActivity"/>
 
     </application>
 
